new logo, spacing fixes

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,7 @@
         <div class="ui fixed inverted menu stackable">
             <div class="ui container">
                 <div class="header item">
-                    <i class="code icon"></i>My Blog App
+                    <i class="comment outline icon"></i>My Blog App
                 </div>
                 <a href="/" class="item">Home</a>
                 <a href="/blogs/new" class="item">New Post</a>
