--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,9 +1,10 @@
 i.icon {
-    font-size: 1em;
+    font-size: 2em;
+    margin-right: 10px;
 }
 
 .container.main {
-    margin-top: 7em;
+    margin-top: 5em;
 }
 
 .column {
