--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
             <div class="ui stacked segment">
                 <div class="field">
                     <div class="ui left icon input">
-                        <i class="user icon"></i>
+                        <i id="formicon" class="user icon"></i>
                         <input
                             type="text"
                             name="username"
@@ -22,7 +22,7 @@
                 </div>
                 <div class="field">
                     <div class="ui left icon input">
-                        <i class="lock icon"></i>
+                        <i id="formicon" class="lock icon"></i>
                         <input
                             type="password"
                             name="password"
