sizing fix on icons

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,10 @@
                         <a
                             class="ui small basic violet button"
                             href="/blogs/<%=blog._id%>"
-                            >Read More<i class="right chevron icon"></i>
+                            >Read More<i
+                                id="morebutton"
+                                class="right chevron icon"
+                            ></i>
                         </a>
                     </div>
                 </div>
