--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,4 +1,4 @@
-i.icon {
+#logo {
     font-size: 2em;
 }
 
@@ -9,10 +9,6 @@ i.icon {
 .column {
     max-width: 450px;
     margin-top: 100px;
-}
-
-#formicon {
-    width: 1.2em;
 }
 
 #desc {
